# mlops-summer-2025

./: .gitignore  MLOps_FastApi_Dandelin_Soham.ipynb  README.md  pyproject.toml  requirements.txt
AutoML/: FLAML.html  FLAML.ipynb  H2O.html  H2O.ipynb  README.md
Data Versioning/: README.md  data_cleaning.ipynb  docker-compose.yml  dp_training.ipynb  eda_model_training.ipynb  upload_versions_dvc.sh  upload_versions_to_lakefs.sh  v1_test.csv.dvc  v1_train.csv.dvc  v2_test.csv.dvc  v2_train.csv.dvc
Data Versioning/.dvc/: config
ML Experiments & Feature Store/: MLOps HW2.html  MLOps HW2.ipynb  README.md
Model Monitoring/: README.md
