[project]
name = "mlops-summer-2025"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = "==3.11.*"
dependencies = [
    "absl-py==1.4.0",
    "ai-edge-litert==1.3.0",
    "aiobotocore==2.23.0",
    "aiohappyeyeballs==2.6.1",
    "aiohttp==3.12.13",
    "aiohttp-retry==2.9.1",
    "aioitertools==0.12.0",
    "aiosignal==1.3.2",
    "amqp==5.3.1",
    "annotated-types==0.7.0",
    "antlr4-python3-runtime==4.9.3",
    "anyio==4.9.0",
    "appdirs==1.4.4",
    "appnope==0.1.4",
    "argon2-cffi==25.1.0",
    "argon2-cffi-bindings==21.2.0",
    "arrow==1.3.0",
    "asttokens==3.0.0",
    "astunparse==1.6.3",
    "async-lru==2.0.5",
    "asyncssh==2.21.0",
    "atpublic==6.0.1",
    "attrs==25.3.0",
    "babel==2.17.0",
    "backports-strenum==1.2.8",
    "beautifulsoup4==4.13.4",
    "billiard==4.2.1",
    "bleach==6.2.0",
    "boto3==1.38.27",
    "botocore==1.38.27",
    "cachetools==5.5.2",
    "celery==5.5.3",
    "certifi==2025.6.15",
    "cffi==1.17.1",
    "charset-normalizer==3.4.2",
    "click==8.2.1",
    "click-didyoumean==0.3.1",
    "click-plugins==1.1.1.2",
    "click-repl==0.3.0",
    "cloudpickle==3.1.1",
    "colorama==0.4.6",
    "comm==0.2.2",
    "configobj==5.0.9",
    "contourpy==1.3.2",
    "cryptography==45.0.4",
    "cycler==0.12.1",
    "cython==3.1.2",
    "debugpy==1.8.14",
    "decorator==5.2.1",
    "defusedxml==0.7.1",
    "dictdiffer==0.9.0",
    "diskcache==5.6.3",
    "distro==1.9.0",
    "dm-tree==0.1.8",
    "docstring-parser==0.16",
    "dp-accounting==0.4.3",
    "dpath==2.2.0",
    "dulwich==0.23.1",
    "dvc==3.60.1",
    "dvc-data==3.16.10",
    "dvc-http==2.32.0",
    "dvc-objects==5.1.1",
    "dvc-render==1.0.2",
    "dvc-s3==3.2.2",
    "dvc-studio-client==0.21.0",
    "dvc-task==0.40.2",
    "einops==0.8.1",
    "entrypoints==0.4",
    "etils==1.12.2",
    "evidently>=0.7.11",
    "executing==2.2.0",
    "fastapi==0.115.14",
    "fastjsonschema==2.21.1",
    "filelock==3.18.0",
    "flaml[automl,autozero]>=2.3.5",
    "flatbuffers==25.2.10",
    "flatten-dict==0.4.2",
    "flufl-lock==8.2.0",
    "fonttools==4.58.4",
    "fqdn==1.5.1",
    "frozenlist==1.7.0",
    "fsspec==2025.5.1",
    "funcy==2.0",
    "future>=1.0.0",
    "gast==0.6.0",
    "gin-config==0.5.0",
    "gitdb==4.0.12",
    "gitpython==3.1.44",
    "google-api-core==2.25.1",
    "google-api-python-client==2.174.0",
    "google-auth==2.40.3",
    "google-auth-httplib2==0.2.0",
    "google-pasta==0.2.0",
    "googleapis-common-protos==1.70.0",
    "grandalf==0.8",
    "grpcio==1.73.1",
    "gto==1.7.2",
    "h11==0.16.0",
    "h2o>=3.46.0.7",
    "h5py==3.14.0",
    "hf-xet==1.1.5",
    "httpcore==1.0.9",
    "httplib2==0.22.0",
    "httpx==0.28.1",
    "huggingface-hub==0.33.1",
    "hydra-core==1.3.2",
    "idna==3.10",
    "immutabledict==2.2.5",
    "importlib-resources==6.5.2",
    "ipykernel==6.29.5",
    "ipython==9.3.0",
    "ipython-pygments-lexers==1.1.1",
    "isoduration==20.11.0",
    "iterative-telemetry==0.0.10",
    "jedi==0.19.2",
    "jinja2==3.1.6",
    "jmespath==1.0.1",
    "joblib==1.5.1",
    "json5==0.12.0",
    "jsonpointer==3.0.0",
    "jsonschema==4.24.0",
    "jsonschema-specifications==2025.4.1",
    "jupyter-client==8.6.3",
    "jupyter-core==5.8.1",
    "jupyter-events==0.12.0",
    "jupyter-lsp==2.2.5",
    "jupyter-server==2.16.0",
    "jupyter-server-terminals==0.5.3",
    "jupyterlab==4.4.4",
    "jupyterlab-pygments==0.3.0",
    "jupyterlab-server==2.27.3",
    "jupyterlab-templates==0.5.2",
    "kaggle==1.7.4.5",
    "keras==3.10.0",
    "kiwisolver==1.4.8",
    "kombu==5.5.4",
    "libclang==18.1.1",
    "lightgbm>=4.6.0",
    "lxml==6.0.0",
    "markdown==3.8.2",
    "markdown-it-py==3.0.0",
    "markupsafe==3.0.2",
    "matplotlib==3.10.3",
    "matplotlib-inline==0.1.7",
    "mdurl==0.1.2",
    "mistune==3.1.3",
    "ml-dtypes==0.3.2",
    "mpmath==1.3.0",
    "multidict==6.6.3",
    "namex==0.1.0",
    "nbclient==0.10.2",
    "nbconvert==7.16.6",
    "nbformat==5.10.4",
    "nest-asyncio==1.6.0",
    "networkx==3.5",
    "notebook-shim==0.2.4",
    "numpy==1.26.4",
    "oauth2client==4.1.3",
    "omegaconf==2.3.0",
    "opencv-python-headless==4.11.0.86",
    "openml>=0.15.1",
    "opt-einsum==3.4.0",
    "optree==0.16.0",
    "orjson==3.10.18",
    "overrides==7.7.0",
    "packaging==22.0",
    "pandas==1.5.3",
    "pandocfilters==1.5.1",
    "parso==0.8.4",
    "pathspec==0.12.1",
    "patsy==1.0.1",
    "pexpect==4.9.0",
    "pillow==11.2.1",
    "platformdirs==4.3.8",
    "portalocker==3.2.0",
    "prometheus-client==0.22.1",
    "promise==2.3",
    "prompt-toolkit==3.0.51",
    "propcache==0.3.2",
    "proto-plus==1.26.1",
    "protobuf==4.25.8",
    "psutil==7.0.0",
    "ptyprocess==0.7.0",
    "pure-eval==0.2.3",
    "py-cpuinfo==9.0.0",
    "pyarrow==20.0.0",
    "pyasn1==0.6.1",
    "pyasn1-modules==0.4.2",
    "pycocotools==2.0.10",
    "pycparser==2.22",
    "pydantic==2.11.7",
    "pydantic-core==2.33.2",
    "pydot==4.0.1",
    "pygit2==1.18.0",
    "pygments==2.19.2",
    "pygtrie==2.5.0",
    "pyngrok==7.2.11",
    "pyparsing==3.2.3",
    "pyspark>=4.0.0",
    "python-dateutil==2.9.0.post0",
    "python-dotenv>=1.1.1",
    "python-json-logger==3.3.0",
    "python-multipart==0.0.20",
    "python-slugify==8.0.4",
    "pytz==2025.2",
    "pyyaml==6.0.2",
    "pyzmq==27.0.0",
    "referencing==0.36.2",
    "regex==2024.11.6",
    "requests==2.32.4",
    "rfc3339-validator==0.1.4",
    "rfc3986-validator==0.1.1",
    "rich==14.0.0",
    "rpds-py==0.25.1",
    "rsa==4.9.1",
    "ruamel-yaml==0.18.14",
    "ruamel-yaml-clib==0.2.12",
    "s3fs==2025.5.1",
    "s3transfer==0.13.0",
    "sacrebleu==2.5.1",
    "safetensors==0.5.3",
    "scikit-learn==1.7.0",
    "scipy==1.16.0",
    "scmrepo==3.3.11",
    "seaborn==0.13.2",
    "semver==3.0.4",
    "send2trash==1.8.3",
    "sentencepiece==0.2.0",
    "seqeval==1.2.2",
    "shellingham==1.5.4",
    "shortuuid==1.0.13",
    "shtab==1.7.2",
    "simple-parsing==0.1.7",
    "six==1.17.0",
    "smmap==5.0.2",
    "sniffio==1.3.1",
    "soupsieve==2.7",
    "sqltrie==0.11.2",
    "stack-data==0.6.3",
    "starlette==0.46.2",
    "statsmodels==0.14.4",
    "sympy==1.14.0",
    "tabulate==0.9.0",
    "termcolor==3.1.0",
    "terminado==0.18.1",
    "text-unidecode==1.3",
    "threadpoolctl==3.6.0",
    "tinycss2==1.4.0",
    "tokenizers==0.21.2",
    "toml==0.10.2",
    "tomlkit==0.13.3",
    "torch==2.7.1",
    "tornado==6.5.1",
    "tqdm==4.67.1",
    "traitlets==5.14.3",
    "transformers==4.53.0",
    "typer==0.16.0",
    "types-python-dateutil==2.9.0.20250516",
    "typing-extensions==4.14.0",
    "typing-inspection==0.4.1",
    "tzdata==2025.2",
    "uri-template==1.3.0",
    "uritemplate==4.2.0",
    "urllib3==2.5.0",
    "uvicorn==0.34.3",
    "vine==5.1.0",
    "voluptuous==0.15.2",
    "wcwidth==0.2.13",
    "webcolors==24.11.1",
    "webencodings==0.5.1",
    "websocket-client==1.8.0",
    "werkzeug==3.1.3",
    "wrapt==1.17.2",
    "yarl==1.20.1",
    "zc-lockfile==3.0.post1",
    "zipp==3.23.0",
]
